--- a/Css/Producto.css
+++ b/Css/Producto.css
@@ -1,8 +1,11 @@
+@font-face {
+  font-family: "Roboto";
+  src: url("/Resources/Font/Roboto/static/Roboto-Light.ttf");
+}
 body{
     margin: 0;
-    padding: 0;
-    overflow-x: hidden; /* ✅ Previene scroll horizontal */
-
+    padding: 0; 
+    font-family: "Roboto",Georgia;
 }
 .ContenedorRaiz{
     background-color: rgb(224, 224, 224);
@@ -30,6 +33,9 @@ body{
 .divAndroid{
     display: none !important;
 }
+.aRedes:hover{
+    scale: 1.1;
+}
 
 @media (max-width: 768px) {
     .carousel {
@@ -50,17 +56,20 @@ body{
     .mx-auto {
         display: none;
     }
+    .footer{
+        display: block;
+    }
     .divAndroid{
         display: block !important;
     }
     .TituloPC{
         display: none;
     }
-      .contenedorlinks{
+    .contenedorlinks{
         flex-direction: column;
-      }
-      .contenedorContactos{
-        margin-top: 7px;
-        margin-bottom: 7px;
-      }
+    }
+    .contenedorContactos{
+    margin-top: 7px;
+    margin-bottom: 7px;
+    }
 }
